adding of the second part of our code.It is the second condition of the loop which is the voronoi diagram to complete the conditions and the spatial operation

--- a/turf_test.HTML
+++ b/turf_test.HTML
@@ -25,7 +25,11 @@
         
         <p>
             <label>opération à effectuer 
-                <input id = 'ope' type="text" name = 'operation'>
+                <!-- <input id = 'ope' type="text" name = 'operation'> -->
+                <select id="ope" name="operation">
+                    <option value="triangulation delaunay">Triangulation delaunay</option>
+                    <option value="diagramme de Voronoï">diagramme de Voronoï</option>
+                  </select>
             </label>
         </p>
 
